# Minecraft_C

./: CMakeLists.txt  Run.cmd
Lib/glad/: CMakeLists.txt
Lib/glad/include/glad/: glad.h
Lib/glad/src/: glad.c
Lib/glfw/: CMakeLists.txt
Resources/Shaders/: Basic.vert
Src/: App.cpp  App.h  Camera.cpp  Camera.h  Main.cpp  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  Util.h
Src/World/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  Generation.cpp  Generation.h  World.cpp  World.h
